versioned_docs/version-2026.1.1/professor/vagner_simoes_santos.mdx
---
sidebar_label: 'Vagner Simões Santos'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Vagner Simões Santos",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (538)",
          "size": 1,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Informática e Automação Comercial - 2398",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "TGC2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Serviços em nuvem - 1250",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2024A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Lógica de programação - 1075",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2026A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Desenvolvimento WEB Orientado a Objetos - 1237",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Vagner Simões Santos

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

